[package]
name = "crawler"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
log = "0.4"
pretty_env_logger = "0.4"
