[package]
name = "crawler"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.0"
url = { version = "2.2", features = ["serde"] }
